chore: secret .gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -312,3 +312,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,eclipse,windows,macos,linux,gradle
+
+/**/secret
