--- a/gusto/build.gradle
+++ b/gusto/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
 	// for S3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
