--- a/gusto/build.gradle
+++ b/gusto/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 
 	// OAuth2
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	// for ObjectMapper
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 }
 
 tasks.named('test') {
