--- a/gusto/build.gradle
+++ b/gusto/build.gradle
@@ -48,6 +48,11 @@ dependencies {
 
 	// for ObjectMapper
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+
+	// for jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 }
 
 tasks.named('test') {
