--- a/gusto/build.gradle
+++ b/gusto/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 
 	// jsch 라이브러리, for ssh tunneling
 	implementation 'com.github.mwiede:jsch:0.2.16'
